--- a/client/src/components/CardHomeInfo/CardHomeInfo.css
+++ b/client/src/components/CardHomeInfo/CardHomeInfo.css
@@ -1,3 +1,11 @@
 .customImage{
     min-height: 14rem;
 }
+
+.heartIconPosition{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+    size: 20px;
+}
