--- a/client/src/components/MapContainer/MapContainer.css
+++ b/client/src/components/MapContainer/MapContainer.css
@@ -8,3 +8,21 @@
     width: 100%;
     height: 100px;
 }
+
+.popupCont {
+    height: 8rem;
+    width: 8rem;
+    align-content: center;
+}
+
+.popUpButton{
+    font-size: 8px;
+    color: white;
+    margin-top: -15px; 
+    margin-left:50px;
+    padding: 6px;   
+}
+
+.popupTitle {
+    font-size: 16px;
+}
