--- a/client/src/components/LoginButton/LoginButton.css
+++ b/client/src/components/LoginButton/LoginButton.css
@@ -1,4 +1,4 @@
-.myButton {
+/* .myButton {
 	box-shadow: 0px 1px 11px -1px #000000;
 	background:linear-gradient(to bottom, #59ff00 5%, #1c4208 100%);
 	background-color:#59ff00;
@@ -17,8 +17,12 @@
 .myButton:hover {
 	background:linear-gradient(to bottom, #1c4208 5%, #59ff00 100%);
 	background-color:#1c4208;
-}
+} */
 .myButton:active {
 	position:relative;
 	top:1px;
+}
+
+.myButton:hover {
+	background-color:white;
 }
