--- a/client/src/components/MapContainer/MapContainer.css
+++ b/client/src/components/MapContainer/MapContainer.css
@@ -10,9 +10,10 @@
 }
 
 .popupCont {
-    height: 8rem;
-    width: 8rem;
+    height: 16rem;
+    width: 16rem;
     align-content: center;
+    padding: 5px;
 }
 
 .popUpButton{
@@ -24,5 +25,5 @@
 }
 
 .popupTitle {
-    font-size: 16px;
+    font-size: 15px;
 }
