--- a/client/src/Pages/MainPage/Main.css
+++ b/client/src/Pages/MainPage/Main.css
@@ -1,9 +1,7 @@
+.mapContainer {
+    /* margin-right: 10px; */
+}
 
 body {
     font-family: 'Red Rose', cursive;
-}
-
-@media (max-width: 620px){
-
-
 }
