--- a/client/src/components/searchform/SearchForm.css
+++ b/client/src/components/searchform/SearchForm.css
@@ -12,7 +12,7 @@ display: flex;}
     background-color:#8B0000;
     color: white;
     padding: 3px;
-    width: 220px;
+    width: 230px;
     border: none;
     font-size: 18px;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
@@ -21,7 +21,7 @@ display: flex;}
     outline: none;
   }
   
-  /* .box::before {
+  .box::before {
     content: "\f13a";
     font-family: FontAwesome;
     position: absolute;
@@ -35,7 +35,7 @@ display: flex;}
     color: rgba(255, 255, 255, 0.5);
     background-color: rgba(255, 255, 255, 0.1);
     pointer-events: none;
-  } */
+  }
   
   .box:hover::before {
     color: rgba(255, 255, 255, 0.6);
@@ -54,9 +54,5 @@ display: flex;}
     margin-left: 30px;
   }
 
-@media (max-width:640px){
-  .searchBox{
-   display: flex;
-  flex-direction: column;
+  .searchColumn{
   }
-}
