--- a/client/src/components/CardHomeInfo/CardHomeInfo.css
+++ b/client/src/components/CardHomeInfo/CardHomeInfo.css
@@ -3,6 +3,11 @@
     width: 100%
 }
 
+.cardSizing {
+    max-width: 26rem;
+    min-width: 18rem;
+}
+
 .heartIconPosition{
     position: absolute;
     top: 7px;
@@ -11,16 +16,13 @@
     height: 20px;
     width: 20px;
 }
-.heartIconPosition:hover{
-color: black;
-}
-
-.homeCard {
-    padding: 10px;
-    /* height: 18rem; */
-    margin: 1px
-}
 
 .homeAddress {
     font-size: 20px;
+}
+.styleIconRed{
+    color:red
+}
+.styleIconRed:hover{
+color: black;
 }
